--- a/NEWS
+++ b/NEWS
@@ -21,6 +21,7 @@ documents those changes that are of interest to users and administrators.
  -- Convert logging in account_gather/common to DEBUG_FLAG_JAG.
  -- Add more logging for jag_common_poll_data() when prec_extra() called.
  -- slurmrestd/v0.0.37 - add API to fetch reservation(s) info.
+ -- scrontab - add ability to update crontab from a file or standard input.
 
 * Changes in Slurm 20.11.4
 ==========================
