--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -33,6 +33,7 @@ COMMAND CHANGES (see man pages for details)
 ===========================================
  -- Changed the --format handling for negative field widths (left justified)
     to apply to the column headers as well as the printed fields.
+ -- scrontab - add ability to update crontab from a file or standard input.
 
 API CHANGES
 ===========
